the commit of finishing touches 4