@@ -15,13 +15,14 @@ import net.minecraft.world.level.levelgen.feature.Feature;
 import net.minecraft.world.level.levelgen.GenerationStep;
 import net.minecraft.world.level.block.Blocks;
 import net.minecraft.world.level.biome.MobSpawnSettings;
-import net.minecraft.world.level.biome.Climate;
 import net.minecraft.world.level.biome.BiomeSpecialEffects;
 import net.minecraft.world.level.biome.BiomeGenerationSettings;
 import net.minecraft.world.level.biome.Biome;
 import net.minecraft.world.level.biome.AmbientParticleSettings;
 import net.minecraft.world.level.biome.AmbientMoodSettings;
 import net.minecraft.world.level.biome.AmbientAdditionsSettings;
+import net.minecraft.world.entity.MobCategory;
+import net.minecraft.world.entity.EntityType;
 import net.minecraft.util.valueproviders.ConstantInt;
 import net.minecraft.sounds.SoundEvent;
 import net.minecraft.sounds.Music;
@@ -32,32 +33,37 @@ import net.minecraft.data.worldgen.features.FeatureUtils;
 import net.minecraft.data.worldgen.BiomeDefaultFeatures;
 import net.minecraft.core.particles.ParticleTypes;
 
+import net.element.elementiummodpartone_theelements.world.features.treedecorators.TheBlazingForestTrunkDecorator;
+import net.element.elementiummodpartone_theelements.world.features.treedecorators.TheBlazingForestLeaveDecorator;
+import net.element.elementiummodpartone_theelements.world.features.treedecorators.TheBlazingForestFruitDecorator;
+import net.element.elementiummodpartone_theelements.init.Elementiummodpart1TheelementsModItems;
+import net.element.elementiummodpartone_theelements.init.Elementiummodpart1TheelementsModBlocks;
+
 import java.util.List;
 
-public class TheBlazingForestBiome {
-	public static final List<Climate.ParameterPoint> PARAMETER_POINTS = List.of(
-			new Climate.ParameterPoint(Climate.Parameter.span(-0.5f, 0.5f), Climate.Parameter.span(-0.5f, 0.5f), Climate.Parameter.span(0.3f, 1f), Climate.Parameter.span(-0.5f, 0.5f), Climate.Parameter.point(0.0f), Climate.Parameter.span(-1f, 1f),
-					0),
-			new Climate.ParameterPoint(Climate.Parameter.span(-0.5f, 0.5f), Climate.Parameter.span(-0.5f, 0.5f), Climate.Parameter.span(0.3f, 1f), Climate.Parameter.span(-0.5f, 0.5f), Climate.Parameter.point(1.0f), Climate.Parameter.span(-1f, 1f),
-					0));
+import com.google.common.collect.ImmutableList;
 
+public class TheBlazingForestBiome {
 	public static Biome createBiome() {
 		BiomeSpecialEffects effects = new BiomeSpecialEffects.Builder().fogColor(12638463).waterColor(4159204).waterFogColor(329011).skyColor(7972607).foliageColorOverride(10387789).grassColorOverride(-10092544)
-				.ambientLoopSound(new SoundEvent(new ResourceLocation("ambient.crimson_forest.additions"))).ambientMoodSound(new AmbientMoodSettings(new SoundEvent(new ResourceLocation("ambient.crimson_forest.mood")), 6000, 8, 2))
-				.ambientAdditionsSound(new AmbientAdditionsSettings(new SoundEvent(new ResourceLocation("ambient.nether_wastes.loop")), 0.0111D))
-				.backgroundMusic(new Music(new SoundEvent(new ResourceLocation("ambient.crimson_forest.mood")), 12000, 24000, true)).ambientParticle(new AmbientParticleSettings(ParticleTypes.CRIMSON_SPORE, 0.005f)).build();
+				.ambientLoopSound(new SoundEvent(new ResourceLocation("ambient.crimson_forest.loop"))).ambientMoodSound(new AmbientMoodSettings(new SoundEvent(new ResourceLocation("ambient.crimson_forest.mood")), 6000, 8, 2))
+				.ambientAdditionsSound(new AmbientAdditionsSettings(new SoundEvent(new ResourceLocation("ambient.crimson_forest.additions")), 0.0111D))
+				.backgroundMusic(new Music(new SoundEvent(new ResourceLocation("ambient.crimson_forest.loop")), 12000, 24000, true)).ambientParticle(new AmbientParticleSettings(ParticleTypes.CRIMSON_SPORE, 0.005f)).build();
 		BiomeGenerationSettings.Builder biomeGenerationSettings = new BiomeGenerationSettings.Builder();
 		biomeGenerationSettings.addFeature(GenerationStep.Decoration.VEGETAL_DECORATION,
 				PlacementUtils.register("elementiummodpart1_theelements:tree_the_blazing_forest",
 						FeatureUtils.register("elementiummodpart1_theelements:tree_the_blazing_forest", Feature.TREE,
-								new TreeConfiguration.TreeConfigurationBuilder(BlockStateProvider.simple(Blocks.OAK_LOG.defaultBlockState()), new StraightTrunkPlacer(4, 2, 0), BlockStateProvider.simple(Blocks.OAK_LEAVES.defaultBlockState()),
-										new BlobFoliagePlacer(ConstantInt.of(2), ConstantInt.of(0), 3), new TwoLayersFeatureSize(1, 0, 1)).ignoreVines().build()),
-						List.of(CountPlacement.of(1), InSquarePlacement.spread(), SurfaceWaterDepthFilter.forMaxDepth(0), PlacementUtils.HEIGHTMAP_OCEAN_FLOOR, PlacementUtils.filteredByBlockSurvival(Blocks.OAK_SAPLING), BiomeFilter.biome())));
+								new TreeConfiguration.TreeConfigurationBuilder(BlockStateProvider.simple(Elementiummodpart1TheelementsModBlocks.BLAZING_LOG_LOG.get().defaultBlockState()), new StraightTrunkPlacer(4, 2, 0),
+										BlockStateProvider.simple(Elementiummodpart1TheelementsModItems.DELETED_MOD_ELEMENT.get().defaultBlockState()), new BlobFoliagePlacer(ConstantInt.of(2), ConstantInt.of(0), 3), new TwoLayersFeatureSize(1, 0, 1))
+										.decorators(ImmutableList.of(TheBlazingForestLeaveDecorator.INSTANCE, TheBlazingForestTrunkDecorator.INSTANCE, TheBlazingForestFruitDecorator.INSTANCE)).build()),
+						List.of(CountPlacement.of(4), InSquarePlacement.spread(), SurfaceWaterDepthFilter.forMaxDepth(0), PlacementUtils.HEIGHTMAP_OCEAN_FLOOR, PlacementUtils.filteredByBlockSurvival(Blocks.OAK_SAPLING), BiomeFilter.biome())));
 		biomeGenerationSettings.addFeature(GenerationStep.Decoration.VEGETAL_DECORATION, PlacementUtils.register("elementiummodpart1_theelements:grass_the_blazing_forest", VegetationFeatures.PATCH_GRASS,
 				List.of(NoiseThresholdCountPlacement.of(-0.8D, 5, 1), InSquarePlacement.spread(), PlacementUtils.HEIGHTMAP_WORLD_SURFACE, BiomeFilter.biome())));
 		BiomeDefaultFeatures.addDefaultCarversAndLakes(biomeGenerationSettings);
 		BiomeDefaultFeatures.addDefaultOres(biomeGenerationSettings);
+		BiomeDefaultFeatures.addExtraGold(biomeGenerationSettings);
 		MobSpawnSettings.Builder mobSpawnInfo = new MobSpawnSettings.Builder();
-		return new Biome.BiomeBuilder().precipitation(Biome.Precipitation.RAIN).temperature(0.5f).downfall(0.5f).specialEffects(effects).mobSpawnSettings(mobSpawnInfo.build()).generationSettings(biomeGenerationSettings.build()).build();
+		mobSpawnInfo.addSpawn(MobCategory.MONSTER, new MobSpawnSettings.SpawnerData(EntityType.HOGLIN, 20, 3, 4));
+		return new Biome.BiomeBuilder().precipitation(Biome.Precipitation.RAIN).temperature(1.5f).downfall(0.5f).specialEffects(effects).mobSpawnSettings(mobSpawnInfo.build()).generationSettings(biomeGenerationSettings.build()).build();
 	}
 }
